--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "now-i",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Track your progress on tasks, without setup or planning",
   "keywords": [
     "todo",
@@ -28,12 +28,14 @@
   "dependencies": {
     "ascii-art": "^2.1.6",
     "async": "^3.1.0",
-    "chai": "^4.2.0",
     "home": "^2.0.0",
-    "mocha": "^6.2.2",
     "moment": "^2.24.0",
     "recursive-readdir": "^2.2.2",
     "uuid": "^3.3.3",
     "yargs": "^15.0.2"
-  }
+    },
+    "devDependencies": {
+      "chai": "^4.2.0",
+      "mocha": "^6.2.2"
+    }
 }
