--- a/package.json
+++ b/package.json
@@ -27,15 +27,16 @@
   "bin": "./bin/now-i",
   "dependencies": {
     "ascii-art": "^2.1.6",
+    "ascii-art-graph": "0.0.4",
     "async": "^3.1.0",
     "home": "^2.0.0",
     "moment": "^2.24.0",
     "recursive-readdir": "^2.2.2",
     "uuid": "^3.3.3",
     "yargs": "^15.0.2"
-    },
-    "devDependencies": {
-      "chai": "^4.2.0",
-      "mocha": "^6.2.2"
-    }
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2"
+  }
 }
