--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
   },
   "bin": "./bin/now-i",
   "dependencies": {
-    "ascii-art": "^2.1.6",
-    "ascii-art-graph": "0.0.4",
+    "app-term-kit": "0.1.0",
+    "ascii-art": "^2.8.0",
+    "ascii-art-ansi": "^1.4.1",
+    "ascii-art-graph": "^0.5.0",
     "async": "^3.1.0",
     "home": "^2.0.0",
     "moment": "^2.24.0",
